Cambios en las dependencias

--- a/candidatos/src/main/resources/application.properties
+++ b/candidatos/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=candidatos
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/candidatos
+spring.datasource.username=usercochi
+spring.datasource.password=usercochi
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
