--- a/candidatos/src/main/resources/application.properties
+++ b/candidatos/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.datasource.password=usercochi
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 
 
